--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -17,9 +17,9 @@ spec:
       containers:
         - name: frontend
           # 여러분의 image 주소를 입력해주세요.
-          # image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3ce402803bfd - J
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3ce402803bfd # - J
           # image: krmp-d2hub-idock.9rum.cc/dev-test/repo_b7faddfe123f
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_8aedef856468 #- S
+#          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_8aedef856468 #- S
           # env:
             # 카카오 환경 변수
             # - name: REACT_APP_REST_API_KEY
