feature: 심부름 요청서 작성 파일 업로드 기능 배포 테스트 #18
- 심부름 요청서 작성 파일 업로드 기능 테스트

Closes #18

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.1'
 	implementation 'org.json:json:20230227'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'software.amazon.awssdk:s3:2.17.285'
+	implementation 'software.amazon.awssdk:apache-client:2.20.56'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
