feature: feature: 3차 배포 - 사용자 정보 조회, 심부름 상세 페이지 조회 API 추가 #23
- 누락된 파일 재 업로드

Closes #23

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'software.amazon.awssdk:s3:2.17.285'
 	implementation 'software.amazon.awssdk:apache-client:2.20.56'
+	implementation 'commons-validator:commons-validator:1.7'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
